# Serpens

./: .gitignore  .gitmodules  README.md  utils.py
examples/2PC/: server1.py  server2.py  user.py
examples/3PC/: server0.py  server1.py  server2.py  user.py
examples/4PC/: server0.py  server1.py  server2.py  server3.py  user.py
examples/5PC/: server0.py  server1.py  server2.py  server3.py  server4.py  user.py
examples/6PC/: server0.py  server1.py  server2.py  server3.py  server4.py  server5.py  user.py
examples/plain/: server.py  user.py
models/: __init__.py  layers.py  lenet.py  minionn.py  resnet.py  resnet_sm.py
mpc/: __init__.py  layers.py  services.py  utils.py
nl2pc/: .gitmodules  CMakeLists.txt  README.md
nl2pc/example/: alice.py  bob.py
nl2pc/src/: CMakeLists.txt  alice_s.cpp  bob_c.cpp  nl2pc_ckks.cpp  nl2pc_ckks.h  pybind_nl2pc.cpp
pretrained/: lenet5.pth  minionn.pth  resnet32.pth
train_models/: train_lenet5.py  train_minionn.py  train_resnet32.py
